@@ -26,6 +26,11 @@ dependencies {
     // Database
     implementation(libs.mysql.connector)
     implementation(libs.sqlite.jdbc)
+    implementation(libs.hibernate.core)
+    implementation("org.jboss.logging:jboss-logging:3.5.3.Final")
+    implementation("jakarta.transaction:jakarta.transaction-api:2.0.1")
+    implementation("jakarta.interceptor:jakarta.interceptor-api:2.1.0")
+    implementation("jakarta.enterprise:jakarta.enterprise.cdi-api:4.0.1")
 
     // Submodules
     implementation(project(":masjidku-accounting-client"))
@@ -47,10 +52,15 @@ dependencies {
     // Utilities
     implementation(libs.slf4j)
     runtimeOnly(libs.logback)
+    implementation(libs.validatorfx)
 
     // Unit Test
     testImplementation(libs.junit)
     testImplementation(libs.archunit.junit5)
+
+    // Dagger 2 DI
+    implementation(libs.dagger)
+    annotationProcessor(libs.dagger.compiler)
 }
 
 javafx {
@@ -118,3 +128,16 @@ tasks.named<JavaExec>("run") {
 
 
 
+
+tasks.named<JavaExec>("run") {
+    doFirst {
+        jvmArgs = listOf(
+            "--module-path", classpath.asPath,
+            "--add-modules", "ALL-MODULE-PATH",
+            "--module", "main/org.masjidku.MainApp",
+            "--enable-native-access=javafx.graphics",
+            "--sun-misc-unsafe-memory-access=allow"
+        )
+        classpath = files()
+    }
+}
